Hidden main-page scrollbar to avoid donut judder

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -94,3 +94,15 @@
     font-size: 16px;
     border-radius: 5px;
   }
+
+  ::-webkit-scrollbar{
+      /* Hide scrollbar for Chrome, Safari and Opera */
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #root {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
